2013-01-31	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gumps/Newfile_gump.cc, usecode/ucdisasm.cc: Fixing clang warnings.
	* files/utils.h: Performance: using const string reference instead.
	* tools/wuc.c, ucxt/src/ucfunc.cc, ucxt/data/u7opcodes.data: Making UCXT -fa
	  output compatible with WUC.
	Rev 7360
	* content/bgkeyring/src/items/magic_carpet.uc: Magic carpet could be rolled
	  while landing.

2013-02-01 Dominik Reichardt <dominus@users.sourceforge.net>	
	* configure.ac, hash_utils.h: Fixed detection of hashmaps
 	  and hashsets for OS X PPC builds.
	* audio/midi_drivers/timidity.*: rename LITTLE_ENDIAN -> 
	  TIMIDITY_LITTLE_ENDIAN to avoid portability issues.
	  
2013-01-31	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* configure.ac, hash_utils.h, Makefile.mingw: Improved detection of hashmaps
	  and hashsets: in order of preference, configure will now look for the TR1
	  hash maps/sets (preferred on GCC 4.3+), then for "ext/hash_(map|set)", and
	  finally "hash_(map|set); if none are found, DONT_HAVE_HASH_(MAP|SET) will
	  be defined so compilation does not fail. MinGW builds will now make use of
	  tr1 unordered maps/sets. xBR scalers are no longer markes as experimental
	  in MinGW.
	Rev 7353
	* audio/AudioChannel.cc: Eliminating warnings.
	Rev 7354
	* all: Eliminating warnings (mainly from Win32 builds).

2013-01-30 Dominik Reichardt <dominus@users.sourceforge.net>	
	* audio/midi_drivers/CoreAudioMidiDriver.*: better error handling by Marzo,
	  fixed USE_DEPRECATED_COREAUDIO_API define to make Exult run on PPC OS X
	  again, fixed copyright headers.
	* audio/midi_drivers/CoreMidiDriver.*: fixed copyright headers.
	  
2013-01-29 Dominik Reichardt <dominus@users.sourceforge.net>	
	* configure.ac, audio/midi_drivers/CoreAudioMidiDriver.*: switched to AUGraph, 
	  synchronized with ScummVM's CoreAudio MIDI driver. Added two frameworks 
	  needed for that.
	  
2013-01-28 Dominik Reichardt <dominus@users.sourceforge.net>	