@@ -1,3 +1,8 @@
+2013-02-01	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* audio/midi_drivers/MidiDriver/*, conf/Configuration.*: Eliminating extra
+	  string copies.
+	* audio/midi_drivers/FluidSynthMidiDriver.cpp: No need for c_str().
+
 2013-01-31	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* gumps/Newfile_gump.cc, usecode/ucdisasm.cc: Fixing clang warnings.
 	* files/utils.h: Performance: using const string reference instead.
